--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "router-dot",
+  "homepage": "https://uddeshyac9.github.io/study-notion/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
